# ntlib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: crypto.h  factorizer.h  math.h  polynomial.h  primes.h  rational.h  string_modifiers.h
tests/: CMakeLists.txt  test_polynomial.cpp  test_rational.cpp
